Cambio para que no envie nada y no liarsela a carlito

--- a/index.html
+++ b/index.html
@@ -568,8 +568,9 @@
             $('select').niceSelect('update');
         }
 
-        const scriptURL =
-            "https://script.google.com/macros/s/AKfycbx0XnGirSaf-h1dFZArTYYfP76PPeWUO3BI0V4H5T801JSSJGririM_WN2iobfMKxC7/exec";
+      //  const scriptURL =
+        //    "https://script.google.com/macros/s/AKfycbx0XnGirSaf-h1dFZArTYYfP76PPeWUO3BI0V4H5T801JSSJGririM_WN2iobfMKxC7/exec";
+        const scriptURL = "";
         const form1 = document.forms["submit-to-google-sheet"];
 
         form1.addEventListener("submit", (e) => {
