--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <div class="single_program program_bg_3 text-center">
                             <div class="program_inner ">
                                 <span id="openDialog" class="link-like">
-                                    20.00
+                                    20:00
                                 </span>
                                 <h3 data-i18n="party_time"></h3>
                                 <a class="program_link" href="https://maps.app.goo.gl/ZkJccNhxeD1Mhhsg7"
@@ -280,8 +280,10 @@
                                                 <h3 data-i18n="form_title"></h3>
                                                 <p data-i18n="form_description"></p>
                                             </div>
+                                            <!-- <form id="submit-to-google-sheet" method="POST"
+                                                 action="https://script.google.com/macros/s/AKfycbx0XnGirSaf-h1dFZArTYYfP76PPeWUO3BI0V4H5T801JSSJGririM_WN2iobfMKxC7/exec">  -->
                                             <form id="submit-to-google-sheet" method="POST"
-                                                action="https://script.google.com/macros/s/AKfycbx0XnGirSaf-h1dFZArTYYfP76PPeWUO3BI0V4H5T801JSSJGririM_WN2iobfMKxC7/exec">
+                                                action="https://script.google.com/macros/s/AKfycbzkRBnoKRtY5lP6X3sGSQ__xB4x7-az21oKW3M_tdEo-oLCg7pI0PLslKUcpLsL-5P1/exec">
                                                 <div class="row">
                                                     <div class="col-xl-12">
                                                         <input type="text" name="Nombre"
@@ -291,6 +293,18 @@
                                                         <label data-i18n="form_guests_label"></label>
                                                         <input type="number" name="Kids"
                                                             data-i18n-placeholder="form_guests_placeholder" min="0">
+                                                    </div>
+                                                    <div class="col-xl-12">
+                                                        <label data-i18n="form_couple"></label>
+                                                        <select class="form-select wide" name="Pareja"
+                                                            id="default-select" class="">
+                                                            <option data-i18n="form_couple_no" value="No"
+                                                                data-i18n-option="form_couple_no">No
+                                                            </option>
+                                                            <option data-i18n="form_couple_yes" value="Yes"
+                                                                data-i18n-option="form_couple_yes">Yes
+                                                            </option>
+                                                        </select>
                                                     </div>
                                                     <div class="col-xl-12">
                                                         <label data-i18n="form_arrival_bus"></label>
@@ -361,6 +375,46 @@
             </div>
         </div>
     </section>
+
+    <!-- HTML: el loading overlay -->
+    <div id="loading-overlay" style="
+  display: none !important;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  color: white;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  flex-direction: column;
+">
+        <div class="spinner" style="
+    border: 5px solid rgba(255, 255, 255, 0.3);
+    border-top: 5px solid white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  "></div>
+        <p style="margin-top: 1rem;">Enviando datos...</p>
+    </div>
+
+    <style>
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
+    <!-- Traducciones ocultas para SweetAlert -->
+    <span id="swal-done-title" data-i18n="swal_done_title" style="display:none;"></span>
+    <span id="swal-done-text" data-i18n="swal_done_text" style="display:none;"></span>
+
+    <span id="swal-error-title" data-i18n="swal_error_title" style="display:none;"></span>
+    <span id="swal-error-text" data-i18n="swal_error_text" style="display:none;"></span>
+
     <!-- / attend_area -->
     <section id="dress_code">
         <div class="love_story_area">
@@ -568,27 +622,37 @@
             $('select').niceSelect('update');
         }
 
-      //  const scriptURL =
+        //  const scriptURL =
         //    "https://script.google.com/macros/s/AKfycbx0XnGirSaf-h1dFZArTYYfP76PPeWUO3BI0V4H5T801JSSJGririM_WN2iobfMKxC7/exec";
-        const scriptURL = "";
+        const scriptURL = "https://script.google.com/macros/s/AKfycbzkRBnoKRtY5lP6X3sGSQ__xB4x7-az21oKW3M_tdEo-oLCg7pI0PLslKUcpLsL-5P1/exec";
         const form1 = document.forms["submit-to-google-sheet"];
+        const loadingOverlay = document.getElementById("loading-overlay");
 
         form1.addEventListener("submit", (e) => {
             e.preventDefault();
+            loadingOverlay.style.display = "flex";
             var formData = new FormData(form1);
-            var formu2 = new FormData(form2);
 
-            formData.append("Musica", formu2.get("Musica"));
             fetch(scriptURL, { method: "POST", body: formData })
                 .then((response) => {
-                    console.log(response)
                     if (!response.ok) {
                         throw new Error("Network response was not ok.");
                     }
-                    swal("Done", "Submitted Successfully.", "success");
+                    // Obtener textos traducidos desde el DOM
+                    const doneTitle = document.getElementById("swal-done-title").textContent;
+                    const doneText = document.getElementById("swal-done-text").textContent;
+
+                    swal(doneTitle, doneText, "success");
                 })
                 .catch((error) => {
-                    swal("Error", "Something went wrong. please try again!", "error");
+                    const errorTitle = document.getElementById("swal-error-title").textContent;
+                    const errorText = document.getElementById("swal-error-text").textContent;
+
+                    swal(errorTitle, errorText, "error");
+                })
+                .finally(() => {
+                    // Ocultar pantalla de carga después del fetch
+                    loadingOverlay.style.display = "none";
                 });
         });
     </script>
