--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <img src="img/banner/ornaments.png" alt="">
                                 <h4 data-i18n="wedding_date"></h4>
                                 <h3 data-i18n="wedding_title"></h3>
-                                <span data-i18n="get_married">Get Married</span>
+                                <!-- <span data-i18n="get_married">Get Married</span> -->
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                 </div>
                 <button class="boxed-btn3" style="margin-top: .5em;">
                     <a id="saveDate" data-i18n="save_the_date"
-                        href="https://calendar.google.com/calendar/u/0/r/eventedit?text=Boda&details=Boda&location=C%2F+Cristal%2C+s%2Fn%2C+11404+Jerez+de+la+Frontera%2C+C%C3%A1diz&dates=20260523T133000/20260523T143000"
+                        href="https://calendar.google.com/calendar/u/0/r/eventedit?text=Boda%20de%20Marta%20y%20Christian&details=Boda%20de%20Marta%20y%20Christian&location=C%2F+Cristal%2C+s%2Fn%2C+11404+Jerez+de+la+Frontera%2C+C%C3%A1diz&dates=20260523T133000/20260523T143000"
                         target="_blank"></a>
                 </button>
             </div>
@@ -158,7 +158,7 @@
                                     </svg>Basílica Menor
                                     Nuestra Señora de la Merced
                                 </a>
-                                <p data-i18n="wedding_ceremony_desc"></p>
+                                <p></p>
                                 <img src="img/program_details/ornaments.png" alt="">
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                     <div class="col-xl-4 col-lg-4">
                         <div class="single_program program_bg_3 text-center">
                             <div class="program_inner ">
-                                <span id="openDialog" class="link-like">
+                                <span>
                                     20:00
                                 </span>
                                 <h3 data-i18n="party_time"></h3>
@@ -198,8 +198,11 @@
                                     </svg>
                                     Barceló
                                     Montecastillo Golf </a>
-                                <p data-i18n="party_desc"></p>
-                                <img src="img/program_details/ornaments.png" alt="">
+                                <span id="pointer_left" class="pointer left">👉</span>
+                                <p data-i18n="party_desc" id="openDialog" class="link-like"></p>
+                                <span id="pointer_right" class="pointer right">👈</span>
+                                <br>
+                                <img class="ornament" src="img/program_details/ornaments.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -230,7 +233,25 @@
         </div>
         <!-- Script Tenor -->
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <script>
+            const element = document.getElementById('openDialog');
+            const leftFinger = document.getElementById('pointer_left');
+            const rightFinger = document.getElementById('pointer_right');
 
+            // Cada 5 segundos, añade la animación y muestra los dedos
+            setInterval(() => {
+                element.classList.add('rainbow-animation');
+                leftFinger.classList.add('show-pointer');
+                rightFinger.classList.add('show-pointer');
+
+                // Remueve la animación y oculta los dedos después de 1s
+                setTimeout(() => {
+                    element.classList.remove('rainbow-animation');
+                    leftFinger.classList.remove('show-pointer');
+                    rightFinger.classList.remove('show-pointer');
+                }, 1000);
+            }, 5000);
+        </script>
         <script>
             const openBtn = document.getElementById('openDialog');
             const dialog = document.getElementById('myDialog');
@@ -435,11 +456,8 @@
                             <h3 data-i18n="dresscode_h3_gentlemen"></h3>
                             <p data-i18n="dresscode_h3_gentlemen_1"></p>
                             <p data-i18n="dresscode_h3_gentlemen_2"></p>
-                            <p data-i18n="dresscode_h3_gentlemen_3"></p>
 
                             <h4 data-i18n="dresscode_avoid"></h4>
-                            <p data-i18n="dresscode_h3_gentlemen_4"></p>
-                            <p data-i18n="dresscode_h3_gentlemen_5"></p>
                             <p data-i18n="dresscode_h3_gentlemen_6"></p>
                             <p data-i18n="dresscode_h3_gentlemen_7"></p>
                         </div>
@@ -533,11 +551,11 @@
                                                     </a>
                                                 </p>
                                             </div>
-                                            <!-- Opcional: un pequeño mensaje decorativo -->
+                                            <!-- Opcional: un pequeño mensaje decorativo
                                             <p class="text-center" style="margin-top: 15px; color: #a6785b;"
                                                 data-i18n="submit_button">
 
-                                            </p>
+                                            </p> -->
                                         </div>
                                     </div>
                                 </div>
