cambio imagenes y textos

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                 <img src="img/banner/flower-top.png" alt="">
             </div>
             <div class="flowaers_bottom d-none d-lg-block">
-                <img src="img/banner/flower-bottom.png" alt="">
+                <img src="img/banner/flower-bottom1.png" alt="">
             </div>
             <div class="container" style="text-align: center;">
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="section_title text-center">
-                            <img src="img/banner/flowers.png" alt="">
+                            <img src="img/banner/flowers1.png" alt="">
                             <h3 data-i18n="wedding_countdown_title"></h3>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="section_title text-center">
-                            <img src="img/banner/flowers.png" alt="">
+                            <img src="img/banner/flowers1.png" alt="">
                             <h3 data-i18n="program_details">Program Details</h3>
                         </div>
                     </div>
@@ -198,10 +198,12 @@
                                     </svg>
                                     Barceló
                                     Montecastillo Golf </a>
-                                <!-- <span id="pointer_left" class="pointer left">👉</span> -->
-                                <p data-i18n="party_desc" id="openDialog" class="link-like"></p>
-                                <!-- <span id="pointer_right" class="pointer right">👈</span>
-                                <br> -->
+                                <div class="inline-container"> <span id="pointer_left" class="pointer left">👉</span>
+                                    <p data-i18n="party_desc" id="openDialog" class="link-like"></p>
+                                    <span id="pointer_right" class="pointer right">👈</span>
+                                    <br>
+                                </div>
+
                                 <img class="ornament" src="img/program_details/ornaments.png" alt="">
                             </div>
                         </div>
@@ -241,14 +243,14 @@
             // Cada 5 segundos, añade la animación y muestra los dedos
             setInterval(() => {
                 element.classList.add('rainbow-animation');
-        //        leftFinger.classList.add('show-pointer');
-          //        rightFinger.classList.add('show-pointer');
+                leftFinger.classList.add('show-pointer');
+                rightFinger.classList.add('show-pointer');
 
                 // Remueve la animación y oculta los dedos después de 1s
                 setTimeout(() => {
                     element.classList.remove('rainbow-animation');
-              //        leftFinger.classList.remove('show-pointer');
-             //         rightFinger.classList.remove('show-pointer');
+                    leftFinger.classList.remove('show-pointer');
+                    rightFinger.classList.remove('show-pointer');
                 }, 1000);
             }, 5000);
         </script>
@@ -288,10 +290,10 @@
                     <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1">
                         <div class="main_attending_area">
                             <div class="flower_1 d-none d-lg-block">
-                                <img src="img/appointment/flower-top.png" alt="">
+                                <img src="img/appointment/flower-top1.png" alt="">
                             </div>
                             <div class="flower_2 d-none d-lg-block">
-                                <img src="img/appointment/flower-bottom.png" alt="">
+                                <img src="img/appointment/flower-bottom1.png" alt="">
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-xl-7 col-lg-8">
@@ -345,8 +347,8 @@
                                                             <option value="No" data-i18n-option="form_arrival_bus_no">
                                                                 Not
                                                                 using it</option>
-                                                            <option value="22:00">22:00</option>
-                                                            <option value="01:00">01:00</option>
+                                                            <option value="Jerez">Jerez</option>
+                                                            <option value="Puerto">Puerto St.María</option>
                                                         </select>
                                                     </div>
                                                     <div class="col-xl-12">
@@ -443,7 +445,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="section_title text-center">
-                            <img src="img/banner/flowers.png" alt="">
+                            <img src="img/banner/flowers1.png" alt="">
                             <h3 data-i18n="dress_code_title"></h3>
                             <p data-i18n="dress_code_intro"></p>
                         </div>
@@ -484,7 +486,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="section_title text-center">
-                            <img src="img/banner/flowers.png" alt="">
+                            <img src="img/banner/flowers1.png" alt="">
                             <p data-i18n="intro_rata"></p>
                             <span data-i18n="iban"></span>
                             <p data-i18n="iban_number"></p>
@@ -506,10 +508,10 @@
                     <div class="col-xl-10 offset-xl-1 col-lg-10 offset-lg-1">
                         <div class="main_attending_area">
                             <div class="flower_1 d-none d-lg-block">
-                                <img src="img/appointment/flower-top.png" alt="">
+                                <img src="img/appointment/flower-top1.png" alt="">
                             </div>
                             <div class="flower_2 d-none d-lg-block">
-                                <img src="img/appointment/flower-bottom.png" alt="">
+                                <img src="img/appointment/flower-bottom1.png" alt="">
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-xl-7 col-lg-8">
