Cambio horas y añadir descuento

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <div class="single_program program_bg_2 text-center">
                             <div class="program_inner ">
                                 <span>
-                                    15:00
+                                    15:15
                                 </span>
                                 <h3 data-i18n="lunch"></h3>
                                 <a class="program_link" href="https://maps.app.goo.gl/ZkJccNhxeD1Mhhsg7"
@@ -187,7 +187,7 @@
                         <div class="single_program program_bg_3 text-center">
                             <div class="program_inner ">
                                 <span>
-                                    20:00
+                                    19:00
                                 </span>
                                 <h3 data-i18n="party_time"></h3>
                                 <a class="program_link" href="https://maps.app.goo.gl/ZkJccNhxeD1Mhhsg7"
@@ -553,11 +553,15 @@
                                                     </a>
                                                 </p>
                                             </div>
-                                            <!-- Opcional: un pequeño mensaje decorativo
-                                            <p class="text-center" style="margin-top: 15px; color: #a6785b;"
-                                                data-i18n="submit_button">
 
-                                            </p> -->
+                                            <p class="text-center" style="margin-top: 15px;" data-i18n="save_hotel">
+
+                                            </p>
+                                            <button class="boxed-btn3" style="margin-top: .5em; :hover{ color: white}">
+                                                <a id="saveHotel" data-i18n="save_hotel2" style="color: black;"
+                                                    href="pdf/Reserva hotel montecastillo con descuento.pdf"
+                                                    target="_blank"></a>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
